--- a/css/bottomstyle.css
+++ b/css/bottomstyle.css
@@ -25,20 +25,20 @@
     margin: 5%;
 }
 
-h2 {
+.bottomText h2 {
     color: #ffffff;
     margin-bottom: 1rem;
     font-size: 1.8rem;
     text-align: center;
 }
 
-ul,
+.bottomText ul,
 ol {
     padding-left: 1.5rem;
     margin: 1rem 0;
 }
 
-ul li,
+.bottomText ul li,
 ol li {
     margin-bottom: 0.5rem;
     font-size: 1rem;
@@ -79,21 +79,5 @@ ol li {
     .tips,
     .faq {
         padding: 1.5rem 1rem;
-    }
-
-    .text-block {
-        padding: 1.5rem;
-    }
-
-    .text-block h1 {
-        font-size: 1.8rem;
-    }
-
-    .text-block p {
-        font-size: 0.95rem;
-    }
-
-    .text-block a {
-        font-size: 0.9rem;
     }
 }
